--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -2127,10 +2127,10 @@ margin:1em 20%;
 }
 
 /* BUG 220509 11.12.2017 Marin Popov */
-.ui-widget .ui-igedit.ui-state-disabled {
+.ui-iggrid .ui-widget .ui-igedit.ui-state-disabled {
     opacity: 1;
 }
-.ui-igedit.ui-state-disabled .ui-igeditor-input-container{
+.ui-iggrid .ui-igedit.ui-state-disabled .ui-igeditor-input-container{
     opacity: .5;
 }
 /* END BUG 220509 */
