--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -2127,7 +2127,7 @@ margin:1em 20%;
 }
 
 /* BUG 220509 11.12.2017 Marin Popov */
-.ui-iggrid .ui-widget .ui-igedit.ui-state-disabled {
+.ui-iggrid .ui-igedit.ui-state-disabled {
     opacity: 1;
 }
 .ui-iggrid .ui-igedit.ui-state-disabled .ui-igeditor-input-container{
