Fix Cell value overlaps when editorOption.disabled is enabled via columnSettings

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -2334,3 +2334,12 @@ div.ui-iggrid-indicatorcontainer.ui-iggrid-collapsibleindicatorcontainer a {
 .ui-iggrid-featurechooser-list-submenu li.ui-state-hover {
     background : #eee;
 }
+
+/* BUG 220509 11.12.2017 Marin Popov */
+.ui-iggrid .ui-igedit.ui-state-disabled {
+    opacity: 1;
+}
+.ui-iggrid .ui-igedit.ui-state-disabled .ui-igeditor-input-container{
+    opacity: .5;
+}
+/* END BUG 220509 */
