--- a/src/css/themes/bootstrap3/_shared-styles/less/infragistics.jqueryui.theme.less
+++ b/src/css/themes/bootstrap3/_shared-styles/less/infragistics.jqueryui.theme.less
@@ -37,9 +37,9 @@
   color: @link-hover-color;
 }
 .ui-widget-header {
-  background:@component-active-bg;
-  border: 1px solid darken(@component-active-bg, 10%);
-  color: @component-active-color;
+  background:@igGray8;
+  border-bottom: 1px solid @igGray9;
+  color: #fff;
   font-weight: normal;
 }
 .ui-widget-header a {
@@ -959,7 +959,7 @@
  */
 .ui-tabs {
   background: transparent;
-  border: 0px none;
+  border: 0 none;
 }
 .ui-tabs .ui-tabs-nav {
   padding: 0;
