fix igGrid header and body are misaligned in 17.2

--- a/src/css/themes/bootstrap3/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/default/infragistics.theme.css
@@ -3035,11 +3035,6 @@ body .ui-tooltip {
 /**********/
 /* igGrid */
 /**********/
-.ui-iggrid table tbody td,
-.ui-iggrid .ui-iggrid-header,
-.ui-iggrid table th {
-  /*padding: 10px;*/
-}
 .ui-iggrid th,
 .ui-iggrid th.ui-widget-header.ui-state-default {
   border-top: 1px solid #ddd;
@@ -3178,12 +3173,8 @@ body .ui-tooltip {
 .ui-iggrid-layout-helper {
   border-bottom: 1px solid #ddd;
 }
-.ui-iggrid-layout-helper > tbody > tr:first-child > td,
-.ui-iggrid-layout-helper > tbody > tr:first-child > td th,
-.ui-iggrid > table > thead + tbody > tr:first-child td,
-.ui-iggrid > table > thead + tfoot + tbody > tr:first-child td {
-  /* border-top: 0 none!important;
- border-top removed for tables with virtualization, or headers */
+.ui-iggrid-layout-helper > tbody > tr:first-child > td th {
+  border-top: 0 !important;
 }
 .ui-iggrid .ui-widget-header,
 .ui-iggrid th,
@@ -3192,7 +3183,6 @@ body .ui-tooltip {
   color: #333333;
   border-color: #ddd;
   border-right: 1px solid #ddd;
-  border-left: 0 none;
 }
 .ui-iggrid th .ui-iggrid-indicatorcontainer .ui-iggrid-summaries-header-icon.ui-icon {
   background: url(images/igGrid/filter-icons-333333.png) no-repeat scroll -416px 0 transparent;
@@ -3276,7 +3266,7 @@ body .ui-tooltip {
   border-color: transparent;
 }
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
-  border-right: 1px solid #ddd;
+  border-right-color: #ddd;
 }
 /* END 246065 */
 .ui-iggrid tbody td,
