--- a/src/css/themes/infragistics/modules/infragistics.ui.grid.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.grid.less
@@ -2,12 +2,6 @@
 /* igGrid */
 /**********/
 
-.ui-iggrid table tbody td,
-.ui-iggrid .ui-iggrid-header,
-.ui-iggrid table th {
-  /*padding: 10px;*/
-}
-
 .ui-iggrid .ui-iggrid-groupbyarea {
   background-color: @body-bg;
   border-color: @table-border-color;
@@ -279,8 +273,13 @@
 
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable,
 .ui-iggrid .ui-iggrid-table-mrl tbody td  {
-  border-right: 1px solid @table-border-color;
+  border-right-color: @table-border-color;
 }
+
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable tr th {
+  border-right: 0;
+}
+
 /* END 246065 */
 
 .ui-iggrid tbody td,
