--- a/src/css/themes/bootstrap3/superhero/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/superhero/infragistics.theme.css
@@ -3175,12 +3175,8 @@ body .ui-tooltip {
 .ui-iggrid-layout-helper {
   border-bottom: 1px solid #4E5D6C;
 }
-.ui-iggrid-layout-helper > tbody > tr:first-child > td,
-.ui-iggrid-layout-helper > tbody > tr:first-child > td th,
-.ui-iggrid > table > thead + tbody > tr:first-child td,
-.ui-iggrid > table > thead + tfoot + tbody > tr:first-child td {
-  /* border-top: 0 none!important;
- border-top removed for tables with virtualization, or headers */
+.ui-iggrid-layout-helper > tbody > tr:first-child > td th {
+  border-top: 0 !important;
 }
 .ui-iggrid .ui-widget-header,
 .ui-iggrid th,
@@ -3189,7 +3185,6 @@ body .ui-tooltip {
   color: #EBEBEB;
   border-color: #4E5D6C;
   border-right: 1px solid #4E5D6C;
-  border-left: 0 none;
 }
 .ui-iggrid th .ui-iggrid-indicatorcontainer .ui-iggrid-summaries-header-icon.ui-icon {
   background: url(images/igGrid/filter-icons-333333.png) no-repeat scroll -416px 0 transparent;
