fix issue with edge/ie toolbar

--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -38,6 +38,7 @@
 	display: -ms-grid;
 	grid-row: 1;
 	-ms-grid-row: 1;
+	-ms-grid-columns: 100%;
 }
 .financialChartRangeSelector {
 	text-align: center;
