--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -71,7 +71,7 @@
 	grid-column: 5;
 	-ms-grid-column: 5;
 }
-.financialChartIndicatorPicker {
+.financialChartIndicatorMenu {
 	flex: 1 0 auto;
 	grid-column: 1;
 	-ms-grid-column: 1;
@@ -91,11 +91,11 @@
 	grid-column: 6;
 	-ms-grid-column: 6;
 }
-.financialChartIndicatorPicker, .financialChartOverlayPicker {
+.financialChartIndicatorMenu, .financialChartOverlayPicker {
 	position: relative; 
 	display: inline-block;
 }
-.financialChartIndicatorPickerDropDownList, .financialChartOverlayPickerDropDownList {
+.financialChartIndicatorMenuDropDownMenu, .financialChartOverlayPickerDropDownList {
 	position: relative; 
 	display: inline-block;
 	z-index: 1;
@@ -112,7 +112,7 @@
     border: 1px solid #ccc;
 }
 
-.financialChartIndicatorPickerDropDownList,
+.financialChartIndicatorMenuDropDownMenu,
 .financialChartOverlayPickerDropDownList {
     position: absolute!important;
 	top: 30px;
@@ -122,7 +122,7 @@
 	box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.2);
 }
 
-.financialChartIndicatorPickerDropDownButton,.financialChartOverlayPickerDropDownButton {
+.financialChartIndicatorMenuDropDownButton,.financialChartOverlayPickerDropDownButton {
 	background-color:transparent;
 	border:none;
 	outline:none;
@@ -130,7 +130,7 @@
 	display: flex;
 }
 
-.financialChartIndicatorPickerDropDownButton:after,.financialChartOverlayPickerDropDownButton:after {
+.financialChartIndicatorMenuDropDownButton:after,.financialChartOverlayPickerDropDownButton:after {
 	width: 0; 
 	height: 0; 
 	border-style: solid;
@@ -172,27 +172,54 @@
 	font:400 13px "Segoe UI", Arial, sans-serif!important;
 }
 
-.financialChartIndicatorPicker {
+.financialChartIndicatorMenu {
 	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%23777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-1' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-1' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E") no-repeat 0 0;
 	padding-left:18px;
 }
-.financialChartIndicatorPicker:hover {
+
+.financialChartIndicatorMenu:hover {
 	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%230090ff;}.cls-2{fill:%23777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-2' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-2' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E") no-repeat 0 0;
 }
+
 .financialChartOverlayPicker {
 	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%23777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2 copy%3C/title%3E%3Cpolygon class='cls-1' points='27.5 45.87 8.96 36.2 0.63 40.54 27.5 54.56 54.38 40.54 46.04 36.2 27.5 45.87'/%3E%3Cpolygon class='cls-1' points='27.5 32.83 8.96 23.15 0.63 27.5 27.5 41.52 54.38 27.5 46.04 23.15 27.5 32.83'/%3E%3Cpolygon class='cls-1' points='27.5 28.48 0.63 14.46 27.5 0.44 54.38 14.46 27.5 28.48'/%3E%3C/svg%3E") no-repeat 0 0;
 	padding-left:18px;
 }
+
 .financialChartOverlayPicker:hover {
 	background: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%230090ff;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2 copy%3C/title%3E%3Cpolygon class='cls-1' points='27.5 45.87 8.96 36.2 0.63 40.54 27.5 54.56 54.38 40.54 46.04 36.2 27.5 45.87'/%3E%3Cpolygon class='cls-1' points='27.5 32.83 8.96 23.15 0.63 27.5 27.5 41.52 54.38 27.5 46.04 23.15 27.5 32.83'/%3E%3Cpolygon class='cls-1' points='27.5 28.48 0.63 14.46 27.5 0.44 54.38 14.46 27.5 28.48'/%3E%3C/svg%3E") no-repeat 0 0;
 }
 
-.financialChartIndicatorPicker:hover,.financialChartOverlayPicker:hover {
+.financialChartIndicatorMenu:hover,.financialChartOverlayPicker:hover {
 	cursor:pointer;
 }
-.financialChartIndicatorPicker:hover button,.financialChartOverlayPicker:hover button {
+.financialChartIndicatorMenu:hover button,.financialChartOverlayPicker:hover button {
 	color:#0090ff;
 }
-.financialChartIndicatorPicker:hover .financialChartIndicatorPickerDropDownButton:after, .financialChartOverlayPicker:hover .financialChartOverlayPickerDropDownButton:after {
+.financialChartIndicatorMenu:hover .financialChartIndicatorMenuDropDownButton:after, .financialChartOverlayPicker:hover .financialChartOverlayPickerDropDownButton:after {
 	border-color: #0090ff transparent transparent transparent;
+}
+.financialChartIndicatorMenuDropDownMenu
+{
+	background-color: white;
+	height: 300px;
+	overflow: auto;
+}
+.financialChartIndicatorMenuDropDownMenu ul
+{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+}
+.financialChartIndicatorMenuDropDownMenu li > ul
+{
+	padding-left: 15px;
+	font-weight: normal;
+}
+.financialChartIndicatorMenuDropDownMenu li.checked:before
+{
+	margin-left: -15px;
+	margin-right: 5px;
+	content: "\2713"
 }
