set min-height on price pane
tfs 251520

--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -20,7 +20,8 @@
 .financialChartPrice {
 	grid-row: 3;
 	-ms-grid-row: 3;
-	margin-top:10px;
+	margin-top: 10px;
+	min-height: 100px;
 }
 .financialChartIndicators {
 	grid-row: 4;
